# quickiebase

./: .gitignore  HISTORY.md  README.md  pyproject.toml  sortexample.py  test_all.py  test_butil.py  test_dbmdb.py  test_queries.py  test_ramdb.py  test_sorting.py  test_suite.py
docs/: home.md  roadmap.md
quickiebase/: butil.py  dbmdb.py  gendb.py  lintest.py  queries.py  quickietypes.py  ramdb.py  sorting.py
