[tool.poetry]
name = "quickiebase"
version = "0.0.1"
description = "A document-based NoSQL database"
authors = ["Phil Hunt <calihunlax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
